# cq_utils

./: .gitignore  README.md
logger/: CMakeLists.txt  README.md
logger/c/: log.c
logger/cpp/: logger.hpp
logger/scripts/: compile.sh  utils.sh
logger/scripts/test/: CTest.sh  CppTest.sh
logger/src/c/: conf.c  conf.h  log.h
logger/src/cpp/: config.hpp  logger.hpp
logger/test/c/: CTest.c
logger/test/cpp/: CppTest.cc
rsync/: utils.sh
scripts/: synccode.sh
